<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dk_theme">Темая тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="user_agr">Пользовательское соглашение</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_finish">Завершить</string>
    <string name="confirm_playlist_exit_title">Завершить создание плейлиста?</string>
    <string name="confirm_playlist_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="back">Назад</string>
    <string name="playlist_creation_error">Не удалось создать плейлист</string>
    <string name="playlist_update_error">Не удалось сохранить изменения</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="playlist_not_found">Плейлист не найден</string>
    <string name="playlist_menu">Меню плейлиста</string>
    <string name="playlist_tracks_section">Треки</string>
    <string name="playlist_empty_tracks">В этом плейлисте пока нет треков</string>
    <string name="playlist_delete_track_message">Хотите удалить трек?</string>
    <string name="playlist_delete_track_positive">ДА</string>
    <string name="playlist_delete_track_negative">НЕТ</string>
    <string name="playlist_empty_share_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="playlist_delete_dialog_title">Удалить плейлист</string>
    <string name="playlist_delete_dialog_message">Хотите удалить плейлист?</string>
    <string name="playlist_delete_dialog_negative">Нет</string>
    <string name="playlist_delete_dialog_positive">Да</string>

    <string name="share_via">Поделиться через...</string>

    <string name="saved_txt">SAVED_TEXT</string>

    <string name="no_results">Ничего не нашлось</string>
    <string name="error_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="vi_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="player_track_time">Длительность</string>
    <string name="player_track_album">Альбом</string>
    <string name="player_track_year">Год</string>
    <string name="player_track_genre">Жанр</string>
    <string name="player_track_country">Страна</string>
    <string name="std_time" >00:00</string>
    <string name="retry">Обновить</string>

    <string name="course_url">https://practicum.yandex.kz/profile/android-developer-plus/</string>
    <string name="terms_url" >https://yandex.ru/legal/practicum_offer/</string>
    <string name="sup_mail" >OKTAHOB@yandex.kz</string>
    <string name="message_to_sup_h">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_sup">Спасибо разработчикам и разработчицам за крутое приложение!</string>
</resources>