<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"
        app:title="@string/settings"
        app:titleTextAppearance="@style/SettingsToolbarTitleTextStyle"
        app:titleTextColor="@color/yp_black"
        app:titleMarginStart="16dp"
        app:titleMarginTop="14dp"
        style="@style/TopBar"
        app:navigationIcon="@drawable/arrow"
        />


    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/MaterialTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/dk_theme"
        app:thumbTint="@color/thumb_color"
        app:trackTint="@color/track_color"

        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MaterialTextViewStyle"
        android:drawableEnd="@drawable/share"
        android:text="@string/share"
         />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MaterialTextViewStyle"
        android:drawableEnd="@drawable/help"
        android:text="@string/help"
         />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MaterialTextViewStyle"
        android:drawableEnd="@drawable/arl"
        android:text="@string/user_agr"
        />

</LinearLayout>