<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.features.search.presentation.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.features.media.presentation.ui.MediaLibraryFragment"
        android:label="@string/media"
        tools:layout="@layout/fragment_media_library" >
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playlistDetailsFragment"
            app:destination="@id/playlistDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.features.settings.presentation.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.playlistmaker.features.player.presentation.ui.PlayerFragment"
        android:label="Player"
        tools:layout="@layout/fragment_player">
        <argument
            android:name="trackJson"
            app:argType="string" />
        <action
            android:id="@+id/action_playerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.features.media.presentation.ui.CreatePlaylistFragment"
        android:label="@string/new_playlist"
        tools:layout="@layout/fragment_create_playlist" />

    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlistmaker.features.media.presentation.ui.EditPlaylistFragment"
        android:label="@string/edit_playlist"
        tools:layout="@layout/fragment_create_playlist" >
        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/playlistDetailsFragment"
        android:name="com.example.playlistmaker.features.media.presentation.ui.PlaylistDetailsFragment"
        android:label="@string/tab_playlists"
        tools:layout="@layout/fragment_playlist_details" >
        <argument
            android:name="playlistId"
            app:argType="long" />
        <action
            android:id="@+id/action_playlistDetailsFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_playlistDetailsFragment_to_editPlaylistFragment"
            app:destination="@id/editPlaylistFragment" />
    </fragment>

    <action
        android:id="@+id/action_searchFragment_to_playerFragment"
        app:destination="@id/playerFragment" />

</navigation> 