<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:paddingBottom="28dp"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"

        app:title="@string/app_name"
        app:titleMarginStart="16dp"
        app:titleMarginTop="14dp"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle"
        app:titleTextColor="@color/yp_white"
        android:layout_marginBottom="24dp"
        />

    <Button
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:id="@+id/srch_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        app:cornerRadius="@dimen/rounding"
        app:icon="@drawable/search"
        app:iconGravity="textStart"

        app:iconPadding="@dimen/ic_padding"
        app:iconTint="@color/black" />

    <Button
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:id="@+id/media_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/rounding"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ic_padding"
        app:iconTint="@color/black"

        android:layout_weight="3"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"

        android:text="@string/media"
        app:icon="@drawable/media"/>

    <Button

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:id="@+id/set_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/rounding"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/ic_padding"
        app:iconTint="@color/black"

        android:layout_weight="3"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_large"

        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>