<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_player"
    android:background="?attr/white_or_black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="?attr/white_or_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/player_barrier_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_tags="tag_time_title, tag_album_title, tag_year_title, tag_genre_title, tag_country_title"
                app:barrierDirection="end"/>

            <ImageView
                android:id="@+id/player_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/black_or_white" />

            <ImageView
                android:id="@+id/player_art"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_min="312dp"
                app:layout_constraintHeight_min="312dp"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_marginTop="26dp"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/placeholder"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_back" />

            <TextView
                android:id="@+id/player_track_name"
                android:background="?attr/white_or_black"
                android:textColor="?attr/black_or_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_medium"
                android:maxLines="1"
                android:textFontWeight="400"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_art"
                />

            <TextView
                android:id="@+id/player_track_artist"
                android:background="?attr/white_or_black"
                android:textColor="?attr/black_or_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_medium"
                android:maxLines="1"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_name"
                tools:text="ArtistArtistArtistArtistArtistArtistArtistArtistArtistArtist" />

            <ImageView
                android:id="@+id/player_btn_add_to_list"
                android:src="@drawable/btn_back"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_play"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toTopOf="@id/player_btn_play"/>

            <ImageView
                android:id="@+id/player_btn_add_to_list_ico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_add"
                app:layout_constraintStart_toStartOf="@id/player_btn_add_to_list"
                app:layout_constraintEnd_toEndOf="@id/player_btn_add_to_list"
                app:layout_constraintTop_toTopOf="@id/player_btn_add_to_list"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_add_to_list"/>

            <ImageView
                android:id="@+id/player_btn_play"
                android:src="@drawable/btn_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/player_btn_like"
                app:layout_constraintStart_toEndOf="@id/player_btn_add_to_list"
                app:layout_constraintTop_toBottomOf="@id/player_track_artist" />

            <TextView
                android:id="@+id/player_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/black_or_white"
                android:text="@string/std_time"
                app:layout_constraintEnd_toEndOf="@id/player_btn_play"
                app:layout_constraintStart_toStartOf="@id/player_btn_play"
                app:layout_constraintTop_toBottomOf="@id/player_btn_play" />

            <ImageView
                android:id="@+id/player_btn_like"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_back"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_play"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="@id/player_btn_play"/>

            <ImageView
                android:id="@+id/player_btn_like_ico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_like"
                app:layout_constraintStart_toStartOf="@id/player_btn_like"
                app:layout_constraintEnd_toEndOf="@id/player_btn_like"
                app:layout_constraintTop_toTopOf="@id/player_btn_like"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_like"/>

            <TextView
                android:id="@+id/player_track_time_title"
                app:layout_constraintTag="tag_time_title"
                style="@style/player_track_title"
                android:text="@string/player_track_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_current_time"/>

            <TextView
                android:id="@+id/player_track_time_value"
                style="@style/player_track_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_current_time"
                tools:text="timeValue" />

            <TextView
                android:id="@+id/player_track_album_title"
                app:layout_constraintTag="tag_album_title"
                style="@style/player_track_title"
                android:text="@string/player_track_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_time_title"/>

            <TextView
                android:id="@+id/player_track_album_value"
                style="@style/player_track_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_time_value"
                tools:text="albumValue" />

            <TextView
                android:id="@+id/player_track_year_title"
                app:layout_constraintTag="tag_year_title"
                style="@style/player_track_title"
                android:text="@string/player_track_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_album_title"/>

            <TextView
                android:id="@+id/player_track_year_value"
                style="@style/player_track_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_album_value"
                tools:text="yearValue" />

            <TextView
                android:id="@+id/player_track_genre_title"
                app:layout_constraintTag="tag_genre_title"
                style="@style/player_track_title"
                android:text="@string/player_track_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_year_title"/>

            <TextView
                android:id="@+id/player_track_genre_value"
                style="@style/player_track_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_year_value"
                tools:text="genreValue" />

            <TextView
                android:id="@+id/player_track_country_title"
                app:layout_constraintTag="tag_country_title"
                style="@style/player_track_title"
                android:text="@string/player_track_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/player_track_genre_title"/>

            <TextView
                android:id="@+id/player_track_country_value"
                style="@style/player_track_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/rightGuideline"
                app:layout_constraintStart_toEndOf="@id/player_barrier_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_genre_value"
                tools:text="countryValue" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/playerOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playerPlaylistsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_rectangle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/add_to_playlist"
            android:textColor="?attr/black_or_white"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playerNewPlaylistButton"
            style="@style/newPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/new_playlist"
            app:cornerRadius="54dp" />

        <TextView
            android:id="@+id/playerPlaylistsEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/no_playlists"
            android:textColor="?attr/gray_or_white"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playerPlaylistsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="16dp"
            tools:listitem="@layout/item_playlist_selection" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout> 